[package]
name = "libwmata"
description = "Get WMATA arrival times"
version = "0.1.1"
authors = ["Joe Borg <joe@josephb.org>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://josephb.org"
repository = "https://github.com/joedborg/libwmata"
readme = "README.md"

[lib]
name = "libwmata"
path = "src/lib.rs"

[dependencies]
phf = { version = "0.8.0", features = ["macros"] }
reqwest = "0.9.24"
serde = "1.0.104"
serde_json = "1.0.48"
